--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,10 +1,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.alterego.androidbound"
-    android:versionCode="5"
-    android:versionName="0.2.1" >
+    android:versionCode="7"
+    android:versionName="0.2.3" >
 
     <uses-sdk
         android:minSdkVersion="9"
         android:targetSdkVersion="19" />
+
+    <application/>
 
 </manifest>
