--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,11 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.alterego.androidbound"
-    android:versionCode="15"
-    android:versionName="0.3.1" >
-
-    <uses-sdk
-        android:minSdkVersion="9"
-        android:targetSdkVersion="19" />
+    package="com.alterego.androidbound">
 
     <application/>
 
