--- a/build.gradle
+++ b/build.gradle
@@ -8,13 +8,38 @@ buildscript {
 }
 apply plugin: 'com.android.library'
 
+repositories {
+    mavenCentral()
+    maven() {
+        name 'SonaType snapshot repository'
+        url 'https://oss.sonatype.org/content/repositories/snapshots'
+    }
+    maven {
+        url "https://github.com/alter-ego/advanced-android-logger/raw/develop/releases/"
+    }
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: '*.jar')
+    compile 'com.alterego:advancedandroidlogger:1.0.4@aar'
+    compile 'com.android.support:appcompat-v7:20.0.0'
+    compile 'joda-time:joda-time:2.4'
+    compile 'io.reactivex:rxjava:1.0.5'
+    compile 'org.projectlombok:lombok:1.16.0'
+    compile 'com.android.support:support-v4:21.0.3'
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.1'
 }
 
 android {
-    compileSdkVersion 19
+    compileSdkVersion 21
     buildToolsVersion "19.1.0"
+
+    defaultConfig {
+        minSdkVersion 18
+        targetSdkVersion 21
+        versionCode 16
+        versionName "0.3.2"
+    }
 
     sourceSets {
         main {
