--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.0.0'
+        classpath 'com.android.tools.build:gradle:1.1.1'
     }
 }
 apply plugin: 'com.android.library'
@@ -16,33 +16,33 @@ ext {
 
 repositories {
     mavenCentral()
-    maven() {
-        name 'SonaType snapshot repository'
-        url 'https://oss.sonatype.org/content/repositories/snapshots'
-    }
-    maven {
-        url "https://github.com/alter-ego/advanced-android-logger/raw/develop/releases/"
-    }
+    maven() { url 'https://oss.sonatype.org/content/repositories/snapshots' }
+    maven { url "https://github.com/alter-ego/advanced-android-logger/raw/develop/releases/" }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: '*.jar')
     compile 'com.alterego:advancedandroidlogger:1.0.4@aar'
-    compile 'com.android.support:appcompat-v7:20.0.0'
-    compile 'joda-time:joda-time:2.4'
-    compile 'io.reactivex:rxjava:1.0.5'
-    compile 'org.projectlombok:lombok:1.16.0'
-    compile 'com.android.support:support-v4:21.0.3'
-    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.1'
+
+    compile 'com.android.support:appcompat-v7:22.0.0'
+    compile 'com.android.support:support-v4:22.0.0'
+
+    compile 'joda-time:joda-time:2.7'
+    compile 'io.reactivex:rxandroid:0.24.0'
+
+    provided 'javax.annotation:jsr250-api:1.0'
+    compile 'org.projectlombok:lombok:1.16.2'
+
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.3'
 }
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion "19.1.0"
+    compileSdkVersion 22
+    buildToolsVersion "22"
 
     defaultConfig {
-        minSdkVersion 18
-        targetSdkVersion 21
+        minSdkVersion 16
+        targetSdkVersion 22
         versionCode buildVersionCode
         versionName buildVersionName
     }
@@ -80,7 +80,7 @@ task makeJar(type: Copy) {
     from('build/intermediates/bundles/release/')
     into('releases/')
     include('classes.jar')
-    rename ('classes.jar', 'androidbound.jar')
+    rename('classes.jar', 'androidbound.jar')
 }
 
 makeJar.dependsOn(clearJar, build)
