added MainBindingActivity, TextView, Button to example with color and font

--- a/AndroidBoundExample/src/main/AndroidManifest.xml
+++ b/AndroidBoundExample/src/main/AndroidManifest.xml
@@ -15,5 +15,10 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <activity
+                android:name=".MainBindingActivity"
+                android:label="@string/app_name">
+        </activity>
     </application>
 </manifest>
