--- a/AndroidBoundExample/src/main/AndroidManifest.xml
+++ b/AndroidBoundExample/src/main/AndroidManifest.xml
@@ -20,5 +20,10 @@
                 android:name=".MainBindingActivity"
                 android:label="@string/app_name">
         </activity>
+
+        <activity
+                android:name=".ListViewActivity"
+                android:label="@string/app_name">
+        </activity>
     </application>
 </manifest>
