--- a/AndroidBoundExample/src/main/AndroidManifest.xml
+++ b/AndroidBoundExample/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="solutions.alterego.androidbound.example">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
             android:allowBackup="true"
             android:icon="@drawable/ic_android_white_48dp"
