--- a/AndroidBound/build.gradle
+++ b/AndroidBound/build.gradle
@@ -33,7 +33,6 @@ repositories {
     jcenter()
     mavenCentral()
     maven() { url 'https://oss.sonatype.org/content/repositories/snapshots' }
-    maven { url "https://github.com/alter-ego/advanced-android-logger/raw/develop/releases/" }
 }
 
 android {
@@ -75,7 +74,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: '*.jar')
-    compile 'com.alterego:advancedandroidlogger:1.0.8@aar'
+    compile 'solutions.alterego:advancedandroidlogger:1.0.8@aar'
 
     compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'com.android.support:support-v4:23.2.1'
