--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,14 @@ env:
 android:
   components:
     # The BuildTools version used by your project
+    - tools
     - build-tools-23.0.2
 
     # The SDK version used to compile your project
     - android-23
 
     # Additional components
+    - extra-android-m2repository
     - extra-google-m2repository
     - addon-google_apis-google-23
     - sys-img-armeabi-v7a-android-21
