--- a/AndroidBoundExample/src/main/AndroidManifest.xml
+++ b/AndroidBoundExample/src/main/AndroidManifest.xml
@@ -27,5 +27,10 @@
                 android:name=".ListViewActivity"
                 android:label="@string/app_name">
         </activity>
+
+        <activity
+                android:name=".ListItemDetailActivity"
+                android:label="@string/app_name">
+        </activity>
     </application>
 </manifest>
