--- a/AndroidBound/build.gradle
+++ b/AndroidBound/build.gradle
@@ -81,6 +81,7 @@ dependencies {
 
     compile 'com.android.support:appcompat-v7:24.2.0'
     compile 'com.android.support:support-v4:24.2.0'
+    compile 'com.android.support:recyclerview-v7:24.2.0'
 
     compile 'io.reactivex:rxandroid:1.1.0'
     compile 'io.reactivex:rxjava:1.1.3'
