--- a/AndroidBoundExample/build.gradle
+++ b/AndroidBoundExample/build.gradle
@@ -55,4 +55,7 @@ dependencies {
     compile project(':AndroidBound')
 
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
 }
