--- a/AndroidBoundExample/src/main/AndroidManifest.xml
+++ b/AndroidBoundExample/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-sdk tools:overrideLibrary="com.codemonkeylabs.fpslibrary"/>
 
     <application
+            android:name=".ExampleApplication"
             android:allowBackup="true"
             android:icon="@drawable/ic_android_white_48dp"
             android:label="@string/app_name"
