--- a/.travis.yml
+++ b/.travis.yml
@@ -15,15 +15,16 @@ android:
    components:
     # The BuildTools version used by your project
     - tools
-    - build-tools-24.0.3
+    - build-tools-25.0.2
 
     # The SDK version used to compile your project
-    - android-24
+    - android-25
 
     # Additional components
     - extra-android-m2repository
     - extra-google-m2repository
     - addon-google_apis-google-23
+    - addon-google_apis-google-25
     - sys-img-armeabi-v7a-android-21
 
 before_install:
