--- a/AndroidBound/build.gradle
+++ b/AndroidBound/build.gradle
@@ -94,6 +94,7 @@ dependencies {
     testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
     testCompile 'junit:junit:4.12'
     testCompile "org.mockito:mockito-core:1.9.5"
+    testCompile 'org.easytesting:fest-assert-core:2.0M10'
 }
 
 // build a jar with source files
