Added example of usage of BindingFragment

--- a/AndroidBoundExample/src/main/AndroidManifest.xml
+++ b/AndroidBoundExample/src/main/AndroidManifest.xml
@@ -49,5 +49,7 @@
                 android:label="@string/app_name">
         </activity>
 
+        <activity android:name=".fragment.TestFragmentActivity" />
+
     </application>
 </manifest>
