--- a/build.gradle
+++ b/build.gradle
@@ -59,6 +59,7 @@ buildscript {
 subprojects { project ->
     repositories {
         mavenCentral()
+        mavenLocal()
         google()
         maven {
             url "https://plugins.gradle.org/m2/"
@@ -72,6 +73,7 @@ subprojects { project ->
             jcenter()
             maven() { url 'https://oss.sonatype.org/content/repositories/snapshots' }
             maven() { url "https://plugins.gradle.org/m2/" }
+            mavenLocal()
         }
         dependencies {
             classpath deps.android.gradlePlugin
