--- a/androidbound-gradle-plugin/build.gradle
+++ b/androidbound-gradle-plugin/build.gradle
@@ -1,15 +1,16 @@
+plugins {
+    id 'java-gradle-plugin'
+}
+
+apply plugin: 'maven'
+
 group = 'solutions.alterego.androidbound'
 version = '0.0.1'
-
-apply plugin: 'java'
-apply plugin: 'maven'
 
 sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
 
 dependencies {
-    compile gradleApi()
-
     compile deps.android.gradlePlugin
     compile deps.javaparser
     compile deps.javapoet
