--- a/AndroidBoundExample/build.gradle
+++ b/AndroidBoundExample/build.gradle
@@ -35,13 +35,11 @@ android {
 }
 
 dependencies {
-    compile deps.support.appcompat
-    compile deps.support.compat
     annotationProcessor deps.lombok
     provided deps.lombok
     compile 'net.danlew:android.joda:2.9.9'
     compile 'com.github.brianPlummer:tinydancer:0.0.9'
-    compile project(':androidbound-support')
+    compile project(':AndroidBound')
 
     compile deps.aaloger
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
