--- a/AndroidBoundExample-support/src/main/AndroidManifest.xml
+++ b/AndroidBoundExample-support/src/main/AndroidManifest.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        package="solutions.alterego.androidbound.example">
+        package="solutions.alterego.androidbound.example.support">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <uses-sdk tools:overrideLibrary="com.codemonkeylabs.fpslibrary" />
 
     <application
-            android:name=".support.ExampleApplication"
+            android:name=".ExampleApplication"
             android:allowBackup="true"
             android:icon="@drawable/ic_android_white_48dp"
             android:label="@string/app_name"
             android:theme="@style/AppTheme">
         <activity
-                android:name=".support.MainActivity"
+                android:name=".MainActivity"
                 android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,35 +23,35 @@
         </activity>
 
         <activity
-                android:name=".support.MainBindingActivity"
+                android:name=".MainBindingActivity"
                 android:label="@string/app_name"/>
 
         <activity
-                android:name=".support.ListViewActivity"
+                android:name=".ListViewActivity"
                 android:label="@string/app_name"></activity>
 
         <activity
-                android:name=".support.ListViewWithObjectsActivity"
+                android:name=".ListViewWithObjectsActivity"
                 android:label="@string/title_activity_LVWithObjects" />
 
         <activity
-                android:name=".support.RecyclerViewActivity"
+                android:name=".RecyclerViewActivity"
                 android:label="@string/title_activity_RV" />
 
         <activity
-                android:name=".support.RecyclerViewWithObjectsActivity"
+                android:name=".RecyclerViewWithObjectsActivity"
                 android:label="@string/title_activity_RVWithObjects" />
         <activity
-                android:name=".support.ListItemDetailActivity"
+                android:name=".ListItemDetailActivity"
                 android:label="@string/app_name"></activity>
 
         <activity
-                android:name=".support.PaginatedRecyclerViewActivity"
+                android:name=".PaginatedRecyclerViewActivity"
                 android:label="@string/app_name"></activity>
 
-        <activity android:name=".support.nestedrvs.NestedRecyclerViewActivity" />
+        <activity android:name=".nestedrvs.NestedRecyclerViewActivity" />
 
-        <activity android:name=".support.fragment.TestFragmentActivity" />
+        <activity android:name=".fragment.TestFragmentActivity" />
 
     </application>
 </manifest>
