added dependencyUpdates task to gradle and travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -36,4 +36,4 @@ cache:
   directories:
     - $HOME/.gradle
 
-script: ./gradlew clean assembleDebug
+script: ./gradlew clean assemble dependencyUpdates
