--- a/AndroidBound/build.gradle
+++ b/AndroidBound/build.gradle
@@ -9,6 +9,7 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'maven'
 apply plugin: 'com.jfrog.bintray'
 apply plugin: 'maven-publish'
+apply plugin: 'com.github.ben-manes.versions'
 
 android {
     compileSdkVersion versions.compileSdk
