--- a/.travis.yml
+++ b/.travis.yml
@@ -36,4 +36,4 @@ cache:
   directories:
     - $HOME/.gradle
 
-script: ./gradlew clean assemble dependencyUpdates
+script: ./gradlew clean assemble dependencyUpdates test
