added more sources to javadoc gradle tasks

--- a/androidbound-support/build.gradle
+++ b/androidbound-support/build.gradle
@@ -78,6 +78,12 @@ task javadoc(type: Javadoc) {
     failOnError false
     source = android.sourceSets.main.java.sourceFiles
     classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+    android.libraryVariants.all { variant ->
+        if (variant.name == 'release') {
+            owner.classpath += variant.javaCompile.classpath
+        }
+    }
+    exclude '**/R.html', '**/R.*.html', '**/index.html'
 }
 
 // build a jar with javadoc
