added lombok to support example module

--- a/AndroidBoundExample-support/build.gradle
+++ b/AndroidBoundExample-support/build.gradle
@@ -35,11 +35,15 @@ android {
 }
 
 dependencies {
+    annotationProcessor deps.lombok
+    provided deps.lombok
+
     compile deps.support.appcompat
     compile deps.support.compat
     compile 'net.danlew:android.joda:2.9.9'
     compile 'com.github.brianPlummer:tinydancer:0.0.9'
     compile project(':androidbound-support')
+
 
     compile deps.aaloger
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
